2009-10-13  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* interface.c, config.c, netax25.c, ttyreader.c, ax25.c,
	  aprx.h, ChangeLog:
	    Feed received AX.25 frames to interface layer for possible
	    digipeat processing.  (Missing: APRSIS originated frames!)

	* interface.c, ttyreader.c, aprx.h, aprx.conf.in, aprx.8.in:
	    Remodelled serial-device definitions into interface layer.
	    Documentation updates to match new system.

2009-10-13  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprsis.c, aprx.h, config.c, netbeacon.c, aprx.conf.in,
	  VERSION, README, INSTALL, TODO:
	    <aprsis> interface config with new style entry.
	    More of <interface> definitions.
	    Experiments at aprx.conf.in writing.


	* Makefile.in, aprx.8.in, aprx.conf.in, aprx.h, config.c,
	  filter.c, interface.c, netax25.c, netbeacon.c, pbuf.c,
	  pbuf.h, ttyreader.c:
	    Incremental work on new style of configurations
	    as outlined in the Requirement Specification document.
	    Old style configurations do still work.
	    Serial port initstring is now binary transparent.

2009-10-05  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* VERSION: 1.06

	* netbeacon.c:
	    Complete beacon coordinate validator code, now it
	    can detect invalid input values properly.

	* netax25.c, aprsis.c, ttyreader.c, igate.c, aprx.h:
	    Cleaning gcc -Wall warnings on various platforms,
	    including OpenBSD.

2009-10-01  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* VERSION: 1.05

	* kiss.c, netax25.c, ttyreader.c, aprx.h, ax25.c:
	    Write the SMACK frame with correctly escaped CRC.
	    Fixed also serial-port initstring handling.

2009-09-30  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* VERSION: 1.04

	* netax25.c:
	    When writing AX.25 KISS frame to kernel, try to do it
	    up to 3 times.  Also add some debug statements on
	    ax25-rxport processing.

	* VERSION: 1.03

	* ttyreader.c:
	    Fix on serial port startup - always turn on flows on